testcases/pos/labeled/blocking_on_valdecl_annotation.bard
let val x = 3 raisedTo {secret}
    val y: Int = x
in
    y
end
