testcases/neg/labeled/val_decl_raise_blocking.bard
let val x: Int = 20 raisedTo {secret}
in
    send "welp. This should fail"
end
